# P10-Content_recommandation_app

./: .gitignore  README.md  constants.py  loaders.py  pyproject.toml
app/: main.py  requirements.txt  streamlit_app.py
azure_function/: function_app.py  recommender.py  requirements.txt
documentation/: learnings.md
notebooks/: eda.ipynb  modeling.ipynb
recommenders/: __init__.py  content_base_recommender.py  loaders.py  recommender.py
tests/: conftest.py  test_function_app.py  test_recommender.py
